spring.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot
  namespace: dev
  labels:
    app: springapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springapp
  template:
    metadata:
      labels:
        app: springapp
    spec:
      containers:
      - name: spring-boot
        image: nsama123/spring-boot-mongo:1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springappsvc
  namespace: dev
spec:
  type: NodePort
  selector:
    app: springapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 31000
---
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: mongo
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
  - port: 27017
    targetPort: 27017
