ingress-resource.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource-1
spec:
  rules:
  - host: springapp.samanixonn.click
    http:
      paths:
      # Default Path(/)
      - backend:
          serviceName: springapp
          servicePort: 80
     # - path: /java-web-app
      #  backend:
       #   serviceName: javawebappservice
        #  servicePort: 80
