ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: springapp.samanixonn.click
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: springboot
            port:
              number: 80

  - host: app.samanixonn.click
    http:
      paths:
      - pathType: Prefix
        path: /maven-web-app
        backend:
          service:
            name: appsvc
            port:
              number: 80
